--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -16,9 +16,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="500.0" minWidth="600.0" prefHeight="670.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.trasportoRifiuti.FXMLController">
+<BorderPane fx:id="BorderPane" minHeight="500.0" minWidth="600.0" prefHeight="670.0" prefWidth="700.0" stylesheets="@../styles/Styles.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.trasportoRifiuti.FXMLController">
    <top>
-      <Label text="Previsione per gestione mezzi di trasporto rifiuti" BorderPane.alignment="CENTER">
+      <Label text="Previsione per gestione mezzi di trasporto rifiuti" textFill="WHITE" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets bottom="10.0" />
          </BorderPane.margin>
@@ -37,31 +37,31 @@
                   <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="EFFETTUA  RICERCA" GridPane.halignment="CENTER">
+                  <Label text="EFFETTUA  RICERCA" textFill="#f24b4b" GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Label>
                   <GridPane GridPane.rowIndex="1">
                     <columnConstraints>
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="175.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="175.0" />
+                      <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="175.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="175.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints />
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                        <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                        <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                        <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="seleziona ragione sociale" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <Label text="seleziona ragione sociale" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                         <ComboBox fx:id="cmbRagioneSociale" prefWidth="150.0" promptText="Ragione Sociale" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                        <Label text="seleziona periodo" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                        <Label text="seleziona periodo" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -69,12 +69,12 @@
                         <ComboBox fx:id="cmbMeseInizio" prefWidth="150.0" promptText="mese di inizio" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                         <ComboBox fx:id="cmbMeseFine" prefWidth="150.0" promptText="mese di fine" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                         <Button fx:id="btnCerca" mnemonicParsing="false" onAction="#doRicerca" text="CERCA" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-                        <RadioButton fx:id="rbtnSmaltitore" mnemonicParsing="false" onAction="#associaSmaltitori" text="SMALTITORE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                        <RadioButton fx:id="rbtnSmaltitore" mnemonicParsing="false" onAction="#associaSmaltitori" text="SMALTITORE" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                            <toggleGroup>
                               <ToggleGroup fx:id="ragioneSociale" />
                            </toggleGroup>
                         </RadioButton>
-                        <RadioButton fx:id="rbtnProduttore" mnemonicParsing="false" onAction="#associaProduttori" selected="true" text="PRODUTTORE" toggleGroup="$ragioneSociale" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                        <RadioButton fx:id="rbtnProduttore" mnemonicParsing="false" onAction="#associaProduttori" selected="true" text="PRODUTTORE" textFill="WHITE" toggleGroup="$ragioneSociale" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </children>
@@ -88,14 +88,14 @@
                 <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                 <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                 <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                   <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                  <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+                  <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="GESTIONE SIMULAZIONE" GridPane.halignment="CENTER">
+                  <Label text="GESTIONE SIMULAZIONE" textFill="#f24b4b" GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -106,10 +106,10 @@
                       <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="350.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                      <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="seleziona Descrizione Europea1" GridPane.halignment="CENTER">
+                        <Label text="seleziona Descrizione Europea1" textFill="WHITE" GridPane.halignment="CENTER">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -117,7 +117,7 @@
                         <ComboBox fx:id="cmbDescrizione" onAction="#associaTrasportatori" prefWidth="160.0" promptText="Descrizione Europea1" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                      </children>
                   </GridPane>
-                  <Label text="Inserisci i mezzi di trasporto per ogni ragione sociale Trasportatore. Seleziona una ragione sociale Trasportatore, digita la relativa quantità e capienza. Per confermare premi il pulsante AGGIUNGI. Se desideri cambiare i dati inseriti seleziona una ragione sociale Trasportatore e premi il pulsante RESETTA successivamente ripeti il procedimento." textAlignment="CENTER" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                  <Label text="Inserisci i mezzi di trasporto per ogni ragione sociale Trasportatore. Seleziona una ragione sociale Trasportatore, digita la relativa quantità e capienza. Per confermare premi il pulsante AGGIUNGI. Se desideri cambiare i dati inseriti seleziona una ragione sociale Trasportatore e premi il pulsante RESETTA successivamente ripeti il procedimento." textAlignment="CENTER" textFill="WHITE" wrapText="true" GridPane.halignment="CENTER" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="11.0" />
                      </font>
@@ -131,7 +131,7 @@
                       <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="seleziona ragione sociale Trasportatore" GridPane.halignment="CENTER">
+                        <Label text="seleziona ragione sociale Trasportatore" textFill="WHITE" GridPane.halignment="CENTER">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -145,26 +145,26 @@
                       <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" prefWidth="100.0" />
                         <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="100.0" />
                         <ColumnConstraints fillWidth="false" halignment="CENTER" hgrow="SOMETIMES" prefWidth="100.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="183.0" />
-                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="100.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="150.0" />
+                        <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" prefWidth="133.0" />
                     </columnConstraints>
                     <rowConstraints>
-                      <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
+                      <RowConstraints prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="capienza in Kg" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
+                        <Label text="capienza in Kg" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <Label text="quantità" GridPane.halignment="RIGHT">
+                        <Label text="quantità" textFill="WHITE" GridPane.halignment="RIGHT">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txtQta" alignment="CENTER_RIGHT" prefWidth="80.0" promptText="es. 3" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
                         <TextField fx:id="txtCapienza" alignment="CENTER_RIGHT" prefWidth="80.0" promptText="es.  1000" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
-                        <Button fx:id="btnAggiungi" mnemonicParsing="false" onAction="#doInserimento" text="AGGIUNGI" GridPane.columnIndex="4" GridPane.halignment="RIGHT" />
+                        <Button fx:id="btnAggiungi" mnemonicParsing="false" onAction="#doInserimento" text="AGGIUNGI" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
                         <Button fx:id="btnResetta" mnemonicParsing="false" onAction="#doReset" text="RESETTA" GridPane.columnIndex="5" />
                      </children>
                   </GridPane>
@@ -176,7 +176,7 @@
                       <RowConstraints vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Inserire una probabilità (numero intero da 0  a 100) affinchè i Kg di rifiuti prodotti possano variare ed una percentuale massima di variazione (numero intero maggiore o uguale a 1). Inserire inoltre un numero massimo di viaggi al giorno consentito per i mezzi." textAlignment="CENTER" wrapText="true">
+                        <Label text="Inserire una probabilità (numero intero da 0  a 100) affinchè i Kg di rifiuti prodotti possano variare ed una percentuale massima di variazione (numero intero maggiore o uguale a 1). Inserire inoltre un numero massimo di viaggi al giorno consentito per i mezzi." textAlignment="CENTER" textFill="WHITE" wrapText="true">
                            <font>
                               <Font name="System Bold" size="11.0" />
                            </font>
@@ -196,19 +196,19 @@
                       <RowConstraints valignment="CENTER" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="probabilità" GridPane.halignment="CENTER">
+                        <Label text="probabilità" textFill="WHITE" GridPane.halignment="CENTER">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txtProbabilita" alignment="CENTER_RIGHT" prefWidth="80.0" promptText="es. 30" GridPane.columnIndex="1" GridPane.halignment="LEFT" />
-                        <Label text="percentuale" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                        <Label text="percentuale" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="CENTER">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
                         <TextField fx:id="txtPercentuale" alignment="CENTER_RIGHT" prefWidth="80.0" promptText="es. 40" GridPane.columnIndex="3" GridPane.halignment="LEFT" />
-                        <Label text="max spostamenti " GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                        <Label text="max spostamenti " textFill="WHITE" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
